添加诗云菜单项，启用最新评论卡片，更新评论系统配置，新增诗歌数据

--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -50,6 +50,15 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
 
       figure.highlight
         box-shadow: none
+      
+      .note
+        background: rgb(34, 36, 34)
+      
+      h2
+        color: alpha(#FFFFFF, 1)
+      
+      p
+        color: alpha(#FFFFFF, .7)
 
       .note
         code
