--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -40,6 +40,10 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
       height: 100%
       background-color: alpha($dark-black, .7)
       content: ''
+      background-image: url(https://i.miji.bid/2025/03/01/647aa4e2bc1596254333f2f736678620.png)
+      background-size: 100% 100%
+      background-size: cover
+      background-repeat: no-repeat center center
 
     .container
       code
@@ -71,6 +75,8 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
         border-color: #696969
         background-color: #525252
         color: #e2f1ff
+    #page-header,#page-header:before
+      background: none !important
 
     // 頭部
     #page-header
